@@ -1,78 +1,79 @@
 <Project name="Banter" fileversion="2.0" language="C#" clr-version="Net_2_0" ctype="DotNetProject">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="DotNetProjectConfiguration">
-      <Output directory="./bin/Debug" assembly="Banter" />
+      <Output directory="bin/Debug" assembly="Banter" />
       <Build debugmode="True" target="Exe" />
       <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" clr-version="Net_2_0" />
-      <CodeGeneration compiler="Mcs" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="True" win32Icon="./" ctype="CSharpCompilerParameters" />
+      <CodeGeneration compiler="Mcs" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="True" win32Icon="." ctype="CSharpCompilerParameters" />
     </Configuration>
     <Configuration name="Release" ctype="DotNetProjectConfiguration">
-      <Output directory="./bin/Release" assembly="Banter" />
+      <Output directory="bin/Release" assembly="Banter" />
       <Build debugmode="False" target="Exe" />
       <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" clr-version="Net_2_0" />
-      <CodeGeneration compiler="Mcs" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" win32Icon="./" ctype="CSharpCompilerParameters" />
+      <CodeGeneration compiler="Mcs" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" win32Icon="." ctype="CSharpCompilerParameters" />
     </Configuration>
   </Configurations>
   <Contents>
-    <File name="./Banter/Application.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Defines.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/NotificationArea.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/TrayLib.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Message.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/AccountManagement.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Account.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Utilities.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Person.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/PersonView.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/PersonCard.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Conversation.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ChatWindow.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/MessagesView.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/GConfPreferencesProvider.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Preferences.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/PreferencesDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/XmlFilePreferencesProvider.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Logger.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ActionManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/UIManagerLayout.xml" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./Banter/Avatar.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/AvatarRequirements.cs" subtype="Code" buildaction="Compile" />
-    <File name="./data/images" subtype="Directory" buildaction="Compile" />
-    <File name="./data/images/banter-16.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./data/images/banter-22.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./data/images/banter-24.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./data/images/banter-32.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./data/images/banter-44.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./Banter/GroupWindow.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/PersonManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/PersonGroup.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/InterruptableTimeout.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ConversationManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ProviderUserManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ProviderUser.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Presence.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/PersonSync.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/Theme.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ThemeInfo.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/HIGMessageDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/StatusEntry.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/AvatarSelector.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ComplexMenuItem.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/AvatarMenuItem.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/AvatarButton.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/AvatarManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/VideoView.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ChatWindowManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/ChatType.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/AudioView.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/NotificationManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/NotificationData.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/UriList.cs" subtype="Code" buildaction="Compile" />
-    <File name="./data/Themes/MessageStyles" subtype="Directory" buildaction="Compile" />
-    <File name="./Banter/SidebarTextButton.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/NotifyButton.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/CairoHelper.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Application.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Defines.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/NotificationArea.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/TrayLib.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Message.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/AccountManagement.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Account.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Utilities.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Person.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/PersonView.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/PersonCard.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Conversation.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ChatWindow.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/MessagesView.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/GConfPreferencesProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Preferences.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/PreferencesDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/XmlFilePreferencesProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Logger.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ActionManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/UIManagerLayout.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="Banter/Avatar.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/AvatarRequirements.cs" subtype="Code" buildaction="Compile" />
+    <File name="data/images" subtype="Directory" buildaction="Compile" />
+    <File name="data/images/banter-16.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="data/images/banter-22.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="data/images/banter-24.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="data/images/banter-32.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="data/images/banter-44.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="Banter/GroupWindow.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/PersonManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/PersonGroup.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/InterruptableTimeout.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ConversationManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ProviderUserManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ProviderUser.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Presence.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/PersonSync.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/Theme.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ThemeInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/HIGMessageDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/StatusEntry.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/AvatarSelector.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ComplexMenuItem.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/AvatarMenuItem.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/AvatarButton.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/AvatarManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/VideoView.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ChatWindowManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/ChatType.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/AudioView.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/NotificationManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/NotificationData.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/UriList.cs" subtype="Code" buildaction="Compile" />
+    <File name="data/Themes/MessageStyles" subtype="Directory" buildaction="Compile" />
+    <File name="Banter/SidebarTextButton.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/NotifyButton.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/CairoHelper.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banter/SerializableDictionary.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -92,6 +93,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="notify-sharp, Version=0.4.0.0, Culture=neutral, PublicKeyToken=2df29c54e245917a" />
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Cairo, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../../../usr/lib/telepathy-sharp/INdT.Telepathy.dll" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" ExecuteTargetName="run">
     <BuildFilesVar />
